--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- ios support -->
   <link ref="apple-touch-icon" href="/icons/icon-96x96.png"> <!--- copy for each size of icon you have --->
   <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
+  <meta name="theme-color" content="#FFE1C4">
 </head>
 <body class="grey lighten-4">
 
