--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -42,11 +42,14 @@
   <div class="container grey-text center">
     <h5>OOPS!</h5>
     <p>Currently you cannot go to this page offline</p>
-    <a href='/' class='btn-small orange'>go to Homepage</a> 
+    <a href='/' class='btn-small orange'>go to Homepage</a>
 
   </div>
 
+  <script src="keys.js"></script>
+  <script src="/firebaseSetUp.js"></script>
   <script src="/js/app.js"></script>
+  <script src="/js/db.js"></script>
   <script src="/js/ui.js"></script>
 </body>
 </html>
