able to add new location data

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <label for="description">Description</label>
       </div>
       <div class="input-field">
-        <input placeholder="Wedding" id="contactName" type="text" class="validate">
+        <input placeholder="Ms. Contact Name" id="contactName" type="text" class="validate">
         <label for="contactName">Contact Name</label>
       </div>
       <div class="input-field">
@@ -92,11 +92,13 @@
         </script>
       </div>
       <div class="form-buttons input-field center">
-        <button id="add-ship-button" class="btn-form btn-small" type="submit" data-fir-click="add_ship">Add</button>
+        <button id="add-location-button" class="btn-form btn-small">Add</button>
         <button id="clear-form-button" class="btn-form btn-small" data-fir-click="clear_form">Clear</button>
       </div>
     </form>
   </div>
+
+
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
