--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <!-- add location side nav -->
-  <div id="side-form" class="sidenav side-form">
+  <!-- <div id="side-form" class="sidenav side-form">
     <form class="add-location container section">
       <h6 >New Location</h6>
       <div class="divider"></div>
@@ -69,7 +69,7 @@
         <button class="btn-small">Add</button>
       </div>
     </form>
-  </div>
+  </div> -->
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
